[package]
name = "bevy_lit"
version = "0.1.0"
edition = "2021"
categories = ["bevy", "lighting 2d"]
description = "General purpose 2d lighting for the Bevy game engine."
authors = ["Miguel Albernaz"]
repository = "https://github.com/malbernaz/bevy_lit"
license = "MIT"
readme = "README.md"
exclude = ["static/*"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
] }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_sprite",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"


[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "breakout"
path = "examples/breakout.rs"
