[package]
name = "bevy_lit"
version = "0.2.0"
edition = "2021"
categories = ["graphics", "game-development", "game-engines", "rendering"]
description = "A lighting 2d library for Bevy"
authors = ["Miguel Albernaz"]
repository = "https://github.com/malbernaz/bevy_lit"
license = "MIT"
readme = "README.md"
exclude = ["static/*"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "x11",
] }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_sprite",
  "x11",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[[example]]
name = "basic"
path = "examples/basic.rs"
